# gantry

./: .gitignore  AGENTS.md  CADDY_SETUP.md  README.md  future-features.md  gantry-spec.md  pyproject.toml
docs/: DNS_SETUP.md  REVERSE_PROXY.md  SERVICES.md  UV_USAGE.md
gantry/: __init__.py  caddy_manager.py  cert_manager.py  cli.py  detectors.py  dns_manager.py  dns_templates.py  orchestrator.py  port_allocator.py  process_manager.py  registry.py  routing_config.py
gantry/tui/: __init__.py  app.py  screens.py  widgets.py
tests/: conftest.py  test_caddy_manager.py  test_cert_manager.py  test_cli.py  test_detectors.py  test_dns_manager.py  test_orchestrator.py  test_port_allocator.py  test_process_manager.py  test_registry.py  test_routing_config.py  test_tui.py
tests/integration/: Dockerfile  docker-compose.yml  integration_conftest.py  test_full_lifecycle.py
