[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gantry"
version = "0.1.0"
description = "Local development environment manager"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pydantic>=2.0",
    "textual>=0.30",
    "psutil>=5.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
gantry = "gantry.cli:app"

[project.urls]
Homepage = "https://github.com/cleaver/gantry"
Repository = "https://github.com/cleaver/gantry"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
asyncio_mode = "auto"
